force-app/main/default/objects/Booking__c/fields/ActualCustomerArrivetime__c.field-meta.xml
<CustomField>
    <fullName>ActualCustomerArrivetime__c</fullName>
    <label>Actual Customer Arrive time</label>
    <type>DateTime</type>
</CustomField>