force-app/main/default/objects/Booking__c/fields/ActualEndTime__c.field-meta.xml
<CustomField>
    <fullName>ActualEndTime__c</fullName>
    <label>Actual End Time</label>
    <type>DateTime</type>
</CustomField>