force-app/main/default/objects/Booking__c/fields/ActualStartTime__c.field-meta.xml
<CustomField>
    <fullName>ActualStartTime__c</fullName>
    <label>Actual Start Time</label>
    <type>DateTime</type>
</CustomField>