force-app/main/default/objects/Booking__c/fields/Adrress__c.field-meta.xml
<CustomField>
    <fullName>Adrress__c</fullName>
    <label>Adrress</label>
    <type>TextArea</type>
</CustomField>