force-app/main/default/objects/Booking__c/fields/AppointmentCode__c.field-meta.xml
<CustomField>
    <fullName>AppointmentCode__c</fullName>
    <externalId>true</externalId>
    <label>Appointment code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>