force-app/main/default/objects/Booking__c/fields/Booking_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_End_Time__c</fullName>
    <formula>IF( TEXT(Booking_Time__c) = &apos;Sáng&apos; , DATETIMEVALUE( TEXT( Booking_Date__c ) &amp;&quot; &quot;&amp; &quot;11:00:00&quot;) - 0.2916666667 , IF( TEXT(Booking_Time__c) = &apos;Chiều&apos; , DATETIMEVALUE( TEXT( Booking_Date__c ) &amp;&quot; &quot;&amp; &quot;17:00:00&quot;) - 0.2916666667 , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking End Time</label>
    <type>DateTime</type>
</CustomField>