force-app/main/default/objects/Booking__c/fields/Booking_EndTime__c.field-meta.xml
<CustomField>
    <fullName>Booking_EndTime__c</fullName>
    <label>Booking End Time</label>
    <type>DateTime</type>
</CustomField>