force-app/main/default/objects/Booking__c/fields/Booking_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Time__c</fullName>
    <label>Booking Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sáng</fullName>
            </value>
            <value>
                <fullName>Chiều</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>