force-app/main/default/objects/Booking__c/fields/BookingStartTime__c.field-meta.xml
<CustomField>
    <fullName>BookingStartTime__c</fullName>
    <label>Booking Start Time</label>
    <type>DateTime</type>
</CustomField>