force-app/main/default/objects/Booking__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>HYPER NAKED</fullName>
            </value>
            <value>
                <fullName>SUPER SPORT</fullName>
            </value>
            <value>
                <fullName>SPORT TOURING</fullName>
            </value>
            <value>
                <fullName>ADVENTURE TOURING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>