force-app/main/default/objects/Booking__c/fields/Confirm_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirm_End_Time__c</fullName>
    <label>Confirm End Time</label>
    <type>DateTime</type>
</CustomField>