force-app/main/default/objects/Booking__c/fields/Confirm_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Start_Time__c</fullName>
    <label>Confirm Start Time</label>
    <type>DateTime</type>
</CustomField>