force-app/main/default/objects/Booking__c/fields/Detailing__c.field-meta.xml
<CustomField>
    <fullName>Detailing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailing</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking (Detailing)</relationshipLabel>
    <relationshipName>Service_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>