force-app/main/default/objects/Booking__c/fields/Do_DL__c.field-meta.xml
<CustomField>
    <fullName>Do_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Do/ DL</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>