force-app/main/default/objects/Booking__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>MT-10 SP</fullName>
            </value>
            <value>
                <fullName>MT-07</fullName>
            </value>
            <value>
                <fullName>MT-15</fullName>
            </value>
            <value>
                <fullName>MT-03</fullName>
            </value>
            <value>
                <fullName>MT-09</fullName>
            </value>
            <value>
                <fullName>MT-10</fullName>
            </value>
            <value>
                <fullName>R15M</fullName>
            </value>
            <value>
                <fullName>R3</fullName>
            </value>
            <value>
                <fullName>R7</fullName>
            </value>
            <value>
                <fullName>Tracer 900</fullName>
            </value>
            <value>
                <fullName>Ténéré 700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>