force-app/main/default/objects/Booking__c/fields/Service_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Service_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Consultant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking (Service Consultant)</relationshipLabel>
    <relationshipName>Booking_Consultant</relationshipName>
    <type>Lookup</type>
</CustomField>