force-app/main/default/objects/Booking__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>