force-app/main/default/objects/Booking__c/fields/Technical__c.field-meta.xml
<CustomField>
    <fullName>Technical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>